--- a/pytorch_basics.ipynb
+++ b/pytorch_basics.ipynb
@@ -6,7 +6,7 @@
       "name": "pytorch_basics.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMVaRGmDQ9UB1ozBOapoxLY",
+      "authorship_tag": "ABX9TyOWss/G8xMd8D/36f4/Xaby",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,14 +40,27 @@
       "metadata": {
         "id": "JOhYcUZTM0Vt",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "420b8786-c4ca-4390-b02a-df70064af290"
       },
       "source": [
         "#import Pytorch library\n",
-        "import torch"
+        "import torch\n",
+        "print(f'{torch.__version__}')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.5.0+cu101\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -726,6 +739,19 @@
       "source": [
         "The interoperability between PyTorch and Numpy is really important because most datasets you'll work with will likely be read and preprocessed as Numpy arrays."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Xi3UEyKV3wZc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
